  * Copyright file updates for 2005.
  * Fix manual to note that linux supports HFS+. Closes: #313488
  * Unset LANG in chroot call in chroot-install section of manual.
    Closes: #311704
  * ia64 does not support rarp, remove from manual. Closes: #250028
  * Document deconf-set-selections -c to check preseed files. Closes: #284289

  [ Kurt Roeckx ]
  * Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
    package list. Closes: #306976
  * Change amd64 kernel from 2.6.8-10 to 2.6.8-11.
  * Do not install nano in the monolithic target.
  [ Christian Perrier ]
  * Add the list of needed characters for Kazakh
  * Add the list of needed characters for Vietnamese
  * Add the list of needed characters for Wolof
  [ Colin Watson ]
  * Force HOME=$(TEMP) for hfsutils calls throughout powerpc
    hd_media_common target.
  * Ship yaboot with powerpc hd-media images.
  * Add rescue stanzas to yaboot configuration files.
  * Document raised kernel command-line limits in 2.6.9.
  * Remove devfs=mount from yaboot configuration files. It shouldn't be
    needed any more.
  * Don't remove modules.*map from the initrd if we're using real hotplug.
  * Use the kernel-specific discover and isa-pnp-modules include files
    rather than explicitly listing those udebs throughout pkg-lists.
  * Make a note about another possible cause for 'locale charmap' being
    wrong during font generation, since it confused me for days ...
  * Document new-style timezone preseeding, available from base-config
    2.65.
  * Document rescue mode in the manual.

  [ Frans Pop ]
  * Fix logic error in build/util/pkg-list to get rid of incorrect warnings
    about missing lists.
  * Add build dependencies needed to build PDF/TXT versions of the manual
  * Make main build script for the manual fail on errors
  * Introduce cascading stylesheet for the HTML version of the manual.

  [ Martin Michlmayr ]
  * Add support for rescue mode to mipsel/cobalt.